--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm-run-all -p nodemon browsersync",
     "nodemon": "nodemon server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'controllers,public,views'"
+    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public,views'"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.10",
+    "browser-sync": "^2.26.12",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5"
   }
